# public-python-samples

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
samples/csvfilter-cli/: AGENTS.md  PLANS.md  README.md  pyproject.toml
samples/csvfilter-cli/src/csvfilter_cli/: cli.py  filters.py  io.py
samples/csvfilter-cli/tests/: test_cli.py  test_csvfilter_cli_cli.py  test_csvfilter_cli_filters.py  test_csvfilter_cli_io.py  test_filters.py  test_io.py
samples/csvfilter-cli/tests/data/: sample.csv
samples/file-renamer-cli/: README.md  pyproject.toml  readme_spec_file_renamer.md  spec_file_renamer.md  spec_test_file_renamer.md
samples/file-renamer-cli/src/: file_renamer.py
samples/file-renamer-cli/tests/: test_file_renamer.py
samples/logfilter-cli/: AGENTS.md  PLANS.md  README.md  main.py  pyproject.toml
samples/logfilter-cli/src/logfilter_cli/: __init__.py  cli.py  filters.py  parser.py
samples/logfilter-cli/tests/: test_cli.py  test_filters.py  test_logfilter_cli_filters.py  test_parser.py
samples/password-generator-cli/: README.md  password_gen.py  pyproject.toml
