[project]
name = "csvfilter-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csvfilter_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
